# traffic-violation-system

./: .editorconfig  .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements.txt
.github/workflows/: ci.yml
backend/: config.py
backend/api/: database.py  main.py  models.py  routes.py  schemas.py  ws.py
backend/vision/: detector.py  pipeline.py  tracker.py  violation_manager.py
backend/vision/violations/: direction.py  zone.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
docs/: API.md  ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css
frontend/src/components/dashboard/: LiveAlertFeed.tsx  StatCard.tsx  ViolationsChart.tsx  ViolationsTable.tsx
frontend/src/components/layout/: Sidebar.tsx  Topbar.tsx
frontend/src/hooks/: useAlerts.ts  useWebSocket.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx
scripts/: export_model.py  quantize_model.py  seed_demo_data.py
tests/: conftest.py
tests/backend/: test_api.py  test_tracker.py  test_violations.py
